syntax = "proto3";

message TripAlert {
    string deviceID = 1;
    float lat = 2;
    float lng = 3;
    string timestamp = 4;
    string userID = 5;
    string description_p = 6;
    string vehicleID = 7;
    string vehicleDetails = 8;
}